Do not use Collections.emptyList()
Use List.of() instead. Also use streams to transform entries, resulting
in unmodifiable lists.

Change-Id: Ia94f8a353fec341fd4b2eea4e7eebfd8ce9f4686
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>